<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conversador</string>

    <!-- pantalla principal -->
    <string name="new_conversation">NUEVA CONVERSACIÓN</string>
    <string name="history_panel">VER HISTORIAL</string>
    <string name="action_settings">CONFIGURACIÓN</string>
    <string name="manner_of_use">MODO DE USO</string>
    <string name="exit">SALIR</string>

	<string name="generic_accept">ACEPTAR</string>
    <string name="generic_cancel">CANCELAR</string>
    
    <!-- pantalla configuración -->
    <string name="title_activity_settings">CONFIGURACIÓN</string>
    <string name="settings_back">ATRAS</string>
    <string name="settings_pencil">LÁPIZ</string>
    <string name="settings_pencil_size">TAMAÑO DE LÁPIZ</string>
    <string name="settings_pencil_size_explain">SELECCIONE UN TAMAÑO PARA EL LÁPIZ</string>
    <string name="settings_pencil_color">COLOR DE LÁPIZ</string>
    <string name="settings_pencil_color_explain">SELECCIONE UN COLOR PARA EL LÁPIZ</string>
    <string name="settings_text">TEXTO</string>
	<string name="settings_text_size">TAMAÑO DE TEXTO</string>
	<string name="settings_text_size_explain">SELECCIONE UN TAMAÑO PARA EL TEXTO</string>
    <string name="settings_text_color">COLOR DE TEXTO</string>
    <string name="settings_text_color_explain">SELECCIONE UN COLOR PARA EL TEXTO</string>
    <string name="settings_text_width">ANCHO DEL TEXTO</string>
    <string name="settings_text_width_explain">SELECCIONE UN ANCHO PARA EL TEXTO</string>
    <string name="settings_eraser">GOMA</string>    
    <string name="settings_eraser_size">TAMAÑO GOMA</string>
    <string name="settings_eraser_size_explain">SELECCIONE UN TAMAÑO PARA LA GOMA</string>
    <string name="settings_scenery">ESCENARIOS</string>
    <string name="settings_images">IMAGENES</string>
    <string name="settings_images_explain">SELECCIONE PARA VER LAS ETIQUETAS AL INSERTAR IMAGENES</string>
    <string name="settings_image_title">PERSONALIZAR IMÁGENES</string>
    <string name="settings_image_sumary">SELECCIONE PARA PERSONALIZAR LAS IMÁGENES Y CATEGORÍAS</string>
    <string name="settings_people">CONTACTOS</string>
    <string name="settings_people_explain">SELECCIONE PARA VER LAS ETIQUETAS AL INSERTAR PERSONAS</string>
    <string name="settings_people_title">PERSONALIZAR CONTACTOS</string>
    <string name="settings_people_summary">SELECCIONE PARA PERSONALIZAR LOS CONTACTOS Y CATEGORÍAS</string>
    <string name="settings_element_text">USAR ETIQUETAS?</string>

     <!-- pantalla keys -->
     
    <string name="settings_text_color_key">settings_text_color_key</string>
    <string name="settings_text_size_key">settings_text_size_key</string>
    <string name="settings_text_width_key">settings_text_width_key</string>
    <string name="settings_pencil_color_key">settings_pencil_color_key</string>
    <string name="settings_pencil_size_key">settings_pencil_size</string>
    <string name="settings_eraser_size_key">settings_eraser_size</string>
    <string name="settings_image_tag_key">settings_image_tag_key</string>
    <string name="settings_contact_tag_key">settings_contact_tag_key</string>
         
    <!-- pantalla login -->
    <string name="login_title">ENTRAR</string>
    <string name="login_user">INGRESE USUARIO</string>
    <string name="login_password">INGRESE CONTRASEÑA</string>
    <string name="login_pin">INGRESE PIN</string>
    <string name="login_logup">CREAR CUENTA</string>
    <string name="login_accept">ACEPTAR</string>
    <string name="login_cancel">CANCELAR</string>

    <!-- fragment logout -->
    <string name="logout_title">SALIR</string>
    <string name="logout_message">HA ELEGIDO SALIR DE SU CUENTA Y CONTINUAR SIN CONEXIÓN. ¿DESEA CONTINUAR?</string>
    <string name="logout_accept">ACEPTAR</string>
    <string name="logout_cancel">CANCELAR</string>

    <!-- pantalla elegir escenario -->
    <string name="title_activity_new_scene">SELECCIONE UN ESCENARIO</string>
    <string name="new_scene">NUEVA ESCENA</string>
    <string name="new_scene_start">EMPEZAR</string>
    <string name="new_scene_inner">INTERIOR</string>
    <string name="new_scene_exit">SALIR</string>
    
    <string name="delete_scenario_accept">ACEPTAR</string>
    <string name="delete_scenario_cancel">CANCELAR</string>
    <string name="delete_scenario_title">BORRAR ESCENARIO</string>
    <string name="delete_scenario_message">ESTA SEGURO QUE DESEA BORRAR ESCENARIO?</string>
	<string name="delete_resource_title">BORRAR ELEMENTOS</string>
    <string name="delete_resource_message">ESTA SEGURO QUE DESEA BORRAR ESTE O ESTOS ELEMENTOS?</string>
    
	<string name="delete_image_title">BORRAR IMAGEN</string>
    <string name="delete_image_message">ESTA SEGURO QUE DESEA BORRAR IMAGEN?</string>
	<string name="delete_categ_title">BORRAR CATEGORÍA</string>
    <string name="delete_categ_message">ESTA SEGURO QUE DESEA BORRAR CATEGORÍA?</string>
    <string name="delete_categ_group_title">BORRAR GRUPO DE CONTACTOS</string>
    <string name="delete_categ_group_message">ESTA SEGURO QUE DESEA BORRAR GRUPO DE CONTACTOS?</string>
    
    <!-- pantalla elegir interior de escenario -->
    <string name="title_activity_new_scene_inner">SELECCIONE UN INTERIOR DE</string>
    <string name="new_scene_inner_start">EMPEZAR</string>
    <string name="new_scene_inner_exit">VOLVER</string>

    <!-- Canvas texts -->
    <string name="canvas_done">HECHO</string>

    <!-- escenarios precargados -->
    <string name="blanco">PIZARRA</string>
    <string name="esc_1">CASA</string>
    <string name="esc_2">CALLE</string>
    <string name="esc_3">CONSULTORIO</string>
    <string name="esc_4">FIESTA</string>
    <string name="esc_5">PAISAJE</string>
    <string name="esc_6">PLANISFERIO</string>
    <string name="esc_7">COLECTIVO</string>
    <string name="esc_8">DIARIO</string>

    <!-- otras pantallas -->

    <!-- fragment insert text -->
    <string name="insert_text_title">INSERTAR TEXTO</string>
    <string name="insert_new_categ_name_title">NOMBRE DE CATEGORÍA NUEVA</string>
    <string name="insert_new_contact_group_name_title">NOMBRE DE GRUPO DE CONTACTOS NUEVO</string>
    <string name="insert_text_accept">ACEPTAR</string>
    <string name="insert_text_cancel">CANCELAR</string>

    <!-- fragment insert image -->
    <string name="insert_image_title">INSERTAR IMAGEN</string>
    <string name="insert_image_accept">ACEPTAR</string>
    <string name="insert_image_cancel">CANCELAR</string>
    <string name="insert_image_back">VOLVER</string>

     <!-- fragment insert contact -->
    <string name="insert_contact_title">INSERTAR CONTACTO</string>
    
    <!-- erase all -->
    <string name="erase_all_title">BORRAR TODO</string>
    <string name="erase_all_message">ESTA SEGURO QUE DESEA BORRAR TODO?</string>
    <string name="erase_all_accept">ACEPTAR</string>
    <string name="erase_all_cancel">CANCELAR</string>
    
     <!-- save all -->
    <string name="save_all_title">GUARDAR CONVERSACIÓN</string>
    <string name="save_all_message">ESTÁ SEGURO QUE DESEA GUARDAR LA CONVERSACIÓN?</string>
    <string name="save_all_accept">ACEPTAR</string>
    <string name="save_all_cancel">CANCELAR</string>
    
    <!-- Calculator values -->
    <string name="calc_plus">+</string>
    <string name="calc_minus">-</string>
    <string name="calc_star">*</string>
    <string name="calc_slash">/</string>
    <string name="calc_dot">.</string>
    <string name="calc_open">(</string>
    <string name="calc_close">)</string>
    <string name="calc_clear">&lt;</string>
    <string name="calc_clear_all">&lt;&lt;</string>
    <string name="calc_equal">=</string>
    <string name="close_modal">CERRAR</string>

	<!-- salir conversador -->
    <string name="exit_canvas_title">TERMINAR CONVERSACIÓN</string>
    <string name="exit_canvas_message">ESTÁ SEGURO QUE DESEA TERMINAR LA CONVERSACIÓN?</string>
    <string name="exit_canvas_accept">SI</string>
    <string name="exit_canvas_cancel">NO</string>
    
    <!-- historial -->
    <string name="conversation_history">HISTORIAL DE CONVERSACIONES</string>

    <string name="change_conversation_title">INGRESE UN NUEVO NOMBRE</string>
    
    <!-- borrar conversacion historica -->
    <string name="delete_conversation_title">BORRAR CONVERSACIÓN</string>
    <string name="delete_conversation_message">ESTÁ SEGURO QUE DESEA BORRAR LA CONVERSACIÓN?</string>
    <string name="delete_conversation_accept">ACEPTAR</string>
    <string name="delete_conversation_cancel">CANCELAR</string>
    
    <!-- salir conversador -->
    <string name="exit_app_title">SALIR DEL CONVERSADOR</string>
    <string name="exit_app_message">ESTÁ SEGURO QUE DESEA SALIR DEL CONVERSADOR?</string>
    <string name="exit_app_accept">SI</string>
    <string name="exit_app_cancel">NO</string>
    
    <!-- imagenes precargadas -->
	<string name="obj_1">LLAVES</string>
	<string name="obj_2">COMPUTADORA</string>
	<string name="obj_3">TELÉFONO</string>
	<string name="obj_4">DOCUMENTO</string>
	<string name="obj_5">ANTEOJOS</string>

	<string name="com_1">ASADO</string>
	<string name="com_2">ENSALADA</string>
	<string name="com_3">PASTAS</string>
	<string name="com_4">POSTRE</string>
	<string name="com_5">VINO</string>

	<string name="ani_1">PERRO</string>
	<string name="ani_2">GATO</string>
	<string name="ani_3">PEZ</string>
	<string name="ani_4">TORTUGA</string>
	<string name="ani_5">CABALLO</string>

	<string name="var_1">REVÓLVER</string>
	<string name="var_2">LIBROS</string>
	<string name="var_3">REGALO</string>
	<string name="var_4">MÚSICA</string>
	<string name="var_5">DINERO</string>
	
	 <!-- contactos precargados -->
	 <string name="famo_1">JORGE RIAL</string>

     <!-- manner of use -->
	<string name="title_activity_manner_of_use">USO</string>
	<string name="image">Image</string>
	<string name="nombre">NOMBRE</string>
	<string name="address">DIRECCIÓN</string>
	<string name="phone">TELÉFONO</string>
    
</resources>
