<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ar.fi.uba.androidtalker.TalkerMainActivity" >

    <Button
        android:id="@+id/action_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/history_panel_button"
        android:layout_alignBottom="@+id/history_panel_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="54dp"
        android:text="@string/action_settings" />

    <Button
        android:id="@+id/manner_of_use_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/history_panel_button"
        android:layout_marginRight="33dp"
        android:layout_toLeftOf="@+id/exit_app_button"
        android:text="@string/manner_of_use" />

    <Button
        android:id="@+id/new_conversation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/new_conversation" />

    <Button
        android:id="@+id/history_panel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/manner_of_use_button"
        android:layout_below="@+id/new_conversation_button"
        android:text="@string/history_panel" />

    <Button
        android:id="@+id/exit_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/action_settings_button"
        android:layout_alignTop="@+id/manner_of_use_button"
        android:text="@string/exit" />

</RelativeLayout>