<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
  
  <GridView
      android:id="@+id/gridView"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/new_scene_start"
      android:layout_margin="5dp"
      android:columnWidth="100dp"
      android:drawSelectorOnTop="true"
      android:gravity="center"
      android:numColumns="auto_fit"
      android:stretchMode="columnWidth"
      android:verticalSpacing="5dp" >

    </GridView>

  <Button
      android:id="@+id/new_scene_start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignRight="@+id/gridView"
      android:layout_marginRight="26dp"
      android:text="@string/new_scene_start" />

  <Button
      android:id="@+id/new_scene_inner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/new_scene_start"
      android:layout_alignBottom="@+id/new_scene_start"
      android:layout_toLeftOf="@+id/new_scene_start"
      android:text="@string/new_scene_inner" />

  <Button
      android:id="@+id/new_scene_exit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/new_scene_inner"
      android:layout_alignBottom="@+id/new_scene_inner"
      android:layout_alignParentLeft="true"
      android:text="@string/new_scene_exit" />

</RelativeLayout>    